--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-  "vendor": "vtex",
-  "name": "store-theme",
-  "version": "5.1.0",
+  "vendor": "YOUR_ACCOUNT_NAME",
+  "name": "india-bootcamp-theme",
+  "version": "1.0.0",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
     "sitemap": "0.x",
     "docs": "0.x"
   },
-  "mustUpdateAt": "2018-09-05",
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
@@ -65,7 +64,7 @@
     "vtex.css-handles": "1.x"
   },
   "peerDependencies": {
-    "vtex.reviews-and-ratings": "3.x"
+    "alexstore.front-end-block": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
