vendor name changed

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "vendor": "YOUR_ACCOUNT_NAME",
+  "vendor": "partnerbcdemo",
   "name": "india-bootcamp-theme",
   "version": "1.0.0",
   "builders": {
